# actix-crud

./: .env  .env.sample  .gitignore  Cargo.toml  Makefile
src/: main.rs
src/controllers/: api_responses.rs  health.rs  mod.rs  orders.rs  status.rs  user.rs
src/middlewares/: auth.rs  logger.rs
src/repository/: health_check.rs  mod.rs  order_repo.rs  user_repo.rs
src/routes/: mod.rs
src/utils/: constants.rs  helpers.rs  jwt_impl.rs  mod.rs  types.rs
tests/: user_controller_scaffold.rs
tests/utils/: helpers_test.rs
