[package]
name = "actix-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
bcrypt = "0.17.1"
chrono = {version = "0.4.41", features=["serde"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = {version = "1.0.219", features=["derive"]} 
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "time", "uuid" ] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
